implement handling arbitrary number of cores as array input.

--- a/README
+++ b/README
@@ -11,3 +11,5 @@ This is an altered version of ccbench, the code of which was written by:
 try:
 make UNAME=i3_7020U
 or RYZEN53600
+
+to set cpus to run on, use "./ccbench -c 4 -x [0,1,2,3]" where c is the number of cores and x is the array of cores to run n
